# Solana-Distribution-Market-Demo

./: .gitignore  Cargo.toml  IMPLEMENTATION_NOTES.txt  PITCH_DECK.md  README.md
.github/workflows/: parabola-web.yml
apps/android-demo/: README.md  build.gradle.kts  settings.gradle.kts
apps/android-demo/app/: build.gradle.kts  local.properties
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
crates/live-perp-backend/: Cargo.toml
crates/live-perp-backend/src/: main.rs  simulation.rs
crates/normal-v1-sdk/: Cargo.toml
crates/normal-v1-sdk/src/: lib.rs
examples/: cauchy_simulation.rs  simulation.rs  student_t_simulation.rs  uniform_simulation.rs
landing/: index.html
programs/normal-v1-program/: Cargo.toml
programs/normal-v1-program/src/: lib.rs
programs/normal-v1-program/tests/: lifecycle.rs
simulations/: README.md
simulations/pdamm/agents/: informed_trader.py  lp_provider.py  noise_trader.py
simulations/pdamm/amm/: anchor.py  funding.py  gaussian_mixture.py  numerical.py  oracle.py  perp_market.py
simulations/pdamm/demo/: generate_payload.py  markets.py  runner.py
specs/: devnet-launch-checklist.md  normal-v1-product-roadmap.md  solana-mobile-hackathon-scope.md  solana-normal-v1.md
src/: distributions.rs  fixed_point.rs  lib.rs  market.rs  market_core.rs  math_core.rs  normal_market.rs  normal_math.rs  numerical.rs  product_v1.rs  regime_index.rs  scoring.rs  simulation.rs  solana_program_v1.rs  solana_v1.rs  tests.rs
(+69 files in other folders)
