[package]
name = "live-perp-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
distribution-markets = { path = "../.." }
normal-v1-sdk = { path = "../normal-v1-sdk" }
normal-v1-program = { path = "../../programs/normal-v1-program" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }
tower-http = { version = "0.6", features = ["cors"] }
